# ita-api

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.chromedriver
notebooks/: 01_file_analysis_for_extraction.ipynb
src/: config.py  constants.py  database.py  download_chromedriver.py  main.py
src/alembic/: env.py
src/etl/: drivers.py  extract.py  extraction.py  main.py
src/etl/extract/: __init__.py  __main__.py  _download_pdfs_from_jsons.py  _driver_provas_pos_ita.py  _driver_provas_vestibular_ita.py  _extract_pos.py  _extract_vestibular.py  _json_file_exist.py  constants.py  main.py
src/etl/transform/: __init__.py  __main__.py  constants.py  export_text.py  images.py  intervals.py  main.py  pages.py  paths.py  positions.py  rectangles.py  text_extraction.py
src/models/: __init__.py  base.py  example.py
src/utils/: get_arch.py  get_os.py  selenium_elements.py
